# pallets

./: README.md
donations/: Cargo.toml  README.md
donations/src/: benchmarking.rs  fees.rs  lib.rs  mock.rs  tests.rs  weights.rs
template/: Cargo.toml
template/src/: lib.rs  mock.rs
